--- a/clientes.csproj
+++ b/clientes.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\ClientesBLL.cs" />
+    <Compile Include="DAL\ClientesDAL.cs" />
     <Compile Include="DAL\conexionDAL.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
